<resources>
    <string name="app_name">auth</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid Email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="email_all_caps">EMAIL</string>
    <string name="password_all_caps">PASSWORD</string>
    <string name="email_sent_success_message">We\'ve Sent You A Reset Password Link On Your Registered Email Address</string>
    <string name="turn_on_gps_message">Important!!, Gps Not Turned On You will be redirected to settings page , Please
    turn on GPS and set mode to High Accuracy</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="mobile_error">Enter Valid Mobile No</string>
    <string name="policy">Privacy Policy</string>
    <string name="login_lable">Building India’s #1 Retail Gigforce</string>
    <string name="verification">Verification</string>
    <string name="enter_4_digit">Enter 4 digit code sent to</string>
    <string name="didn_t_receive_code">Didn\'t receive otp?</string>
    <string name="request_again">Request again</string>
    <string name="get_via_call">Get via call</string>
    <string name="contin">Continue</string>
    <string name="mobile_no">Enter Mobile No.</string>
    <string name="valid_password">Enter Valid Password</string>
    <string name="password">Password</string>
    <string name="by_proceeding_you_agree_to_the">By proceeding you agree to the</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_with_otp">Login With Otp</string>
    <string name="loading">Loading</string>


</resources>
