<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">


        <ImageView
            android:id="@+id/arrowBackBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:src="@drawable/back"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:src="@drawable/truman_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/verification"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter_4_digit"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/mobileEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lato"
            android:text="9050030867"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/editTextHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <EditText
                android:id="@+id/et1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/otp_edit_text_backgroung"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/otp_edit_text_backgroung"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/otp_edit_text_backgroung"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/otp_edit_text_backgroung"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/et5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/otp_edit_text_backgroung"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:maxLength="1"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/YoEt"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/otp_edit_text_backgroung"
                android:inputType="number"
                android:maxLength="5"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/otpRet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:text="@string/didn_t_receive_code"
                android:visibility="gone"
                android:textColor="@color/intro_heading"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/otpAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/request_again"
                android:textColor="@color/intro_heading"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:textColor="@color/button_back"
                android:textSize="20sp"
                android:visibility="gone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reqAgain"
                android:layout_centerHorizontal="true"
                android:text="@string/get_via_call"
                android:textColor="@color/intro_heading"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/otpConfirmBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/userNameInputLayout"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button_back"
            android:text="@string/contin"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>